fix: #357 优化z-index的取值

--- a/src/sass/components/bubble.scss
+++ b/src/sass/components/bubble.scss
@@ -20,7 +20,7 @@ $bubble-min-height: 35px;
   background-color: #fff;
   box-shadow: 0 2px 15px -5px rgba(0, 0, 0, 0.5);
   border-radius: $borderRadius;
-  z-index: 999;
+  z-index: 8;
 
   &.cherry-bubble--centered {
     left: 50%;
